# ChangeLog for app-crypt/dogtag-pki-common-ui
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +dogtag-pki-common-ui-1.3.1.ebuild, +metadata.xml:
  initial commit
