@@ -1,4 +1,4 @@
-DIST dogtag-pki-common-ui-1.3.1.tar.gz 64149 RMD160 872f205a4f81cd1720d8dcbdf07af8ddccfcb4cf SHA1 ad5c57a0c385e267bc3181bab4d113523a847ccb SHA256 eca7aa6cdbd910e3a47d15142cb2a6e6a75756ffa60cedc5a2b28d4d30bc8959
-EBUILD dogtag-pki-common-ui-1.3.1.ebuild 566 RMD160 372d385429823f80e52fb48ca33b99e901d38beb SHA1 a0f623c12a756235359229eada642cd2b071f87e SHA256 eec621a5a1400bd682f544bdabeb45a4e1a659082a285865542c074ccb9bab71
-MISC ChangeLog 255 RMD160 63aeebbee949d821f7cfec280d9502e84b6deb3b SHA1 42413b6a6716fe9fa6e81698100ea7357a54b88b SHA256 c1b9050b4e63188bd1e2d613f56e37b1fe4e8e984966aee665b624b6216c0f2b
+DIST dogtag-pki-common-ui-1.3.2.tar.gz 64585 RMD160 e1d27189cf037cac053242cbbd724e290b0f8822 SHA1 534e5360286979254594da272e471b562bd9a40c SHA256 eb15ed67011cf0d894fcf07f2a9239b89c0aba840243941387b1ebc7dd5cb337
+EBUILD dogtag-pki-common-ui-1.3.2.ebuild 566 RMD160 372d385429823f80e52fb48ca33b99e901d38beb SHA1 a0f623c12a756235359229eada642cd2b071f87e SHA256 eec621a5a1400bd682f544bdabeb45a4e1a659082a285865542c074ccb9bab71
+MISC ChangeLog 390 RMD160 a9167bbeb0dd2fb7e1d0fb40c383d556fac16a16 SHA1 72d617efa46fa5a27eb837364bd9931680ea0bbd SHA256 03c46c3302477d2b24736589a6c283bfd4f80e220471fd9210679a010d4db022
 MISC metadata.xml 433 RMD160 04a7b24b349d8ed1178d6f94ebcf18ffd8abb32b SHA1 57ca54490e0c699cb1b35dc4f1d6dfd2176e9bae SHA256 8e546894ef9ed188291f73c5df4220372a61fc83e158b3dcab8ab4c55bbca5c3
