@@ -1,4 +1,4 @@
-DIST dogtag-pki-kra-ui-1.3.0.tar.gz 41622 RMD160 ce283e1af09d77933c51d4086dbf5d04205ebdea SHA1 286a226c93feb931c4d1c11033566638a575b280 SHA256 722f6af59b3c3eabaff4b30b32d2e79426faa880b7a70bcdf5a88d60de95720e
-EBUILD dogtag-pki-kra-ui-1.3.0.ebuild 545 RMD160 fe0e17f38b7cde00fa4197cc403fa003a0ff04d1 SHA1 3b9a0184d518a4bca6204ea52bae78731634a6e5 SHA256 7933cf5baba4539517f8786de6cceff5c5ef114cf63112fafe1df9df79d49ef0
-MISC ChangeLog 273 RMD160 8a95de17a39dcbc220c6521e2ecbf6a8c3aac1d7 SHA1 8561b81f93235f9771cedeac273b603ed56f5041 SHA256 2f9968c458eb178dffbfdfa1cf47f9e398a859e61e69b4f753ea215e7e6048af
+DIST dogtag-pki-kra-ui-1.3.1.tar.gz 42827 RMD160 737701ae43fb014c13a4ba15e131f089d4515273 SHA1 a00b3f114906e58fa760ea5db711904f2eebdf01 SHA256 5244fe2cf7e2203d289ffb918b6745a80645ca0a07cf044387c673f9559a8760
+EBUILD dogtag-pki-kra-ui-1.3.1.ebuild 545 RMD160 fe0e17f38b7cde00fa4197cc403fa003a0ff04d1 SHA1 3b9a0184d518a4bca6204ea52bae78731634a6e5 SHA256 7933cf5baba4539517f8786de6cceff5c5ef114cf63112fafe1df9df79d49ef0
+MISC ChangeLog 402 RMD160 6fd6c14562a50e3e20158a3673cb275e06aefacb SHA1 bd03f636e377a4946c301aac57c5bf19db02be00 SHA256 e0ac3eb4d64c46b0207814709d1425e2f06a8746f1b73d490a7aa24937ade8db
 MISC metadata.xml 467 RMD160 9cd17a865fcf18975192e7a6531fe05f4c1057d2 SHA1 6e74d82cd91fa1819eda609d6fa43f45e2787454 SHA256 1304253e11b8ce9ceb648c45a85b8e29bb266e57647acbad5b0deb2115f751e5
