@@ -2,10 +2,6 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-  01 Aug 2010; A. Vinogradov <spamslepnoga@inbox.ru>
-  -dogtag-pki-console-ui-1.3.0.ebuild, +dogtag-pki-console-ui-1.3.2.ebuild:
-  bump
-
   16 Feb 2010; <slep@vinogradov.lv> +dogtag-pki-console-ui-1.3.0.ebuild,
   +metadata.xml:
   initial commit
