@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Aug 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  -dogtag-pki-common-ui-1.3.1.ebuild, +dogtag-pki-common-ui-1.3.2.ebuild:
+  bump
+
   15 Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   +dogtag-pki-common-ui-1.3.1.ebuild, +metadata.xml:
   initial commit
